FIX: Ajouter npm rebuild pour sqlite3 sur Render + nettoyer node_modules

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: discord-clone
     runtime: node
     plan: free
-    buildCommand: npm install
+    buildCommand: npm install && npm rebuild --build-from-source
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
