--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^9.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.3",
     "socket.io": "^4.6.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
